tests/error/pointer_const_propagation.bz
function main()
{
	let i = 0;

	let p: *int32 = &i;
	let pp: **int32 = &p;

	let _: **const int32 = pp;
}
